@@ -1,5 +1,6 @@
 Changes for 1.6.2
 
+ - [DEV-268] added support of system.swap.size under FreeBSD (Sasha)
  - [DEV-276] added support of HTML text in plaintext view in screens (Artem)
  - [ZBX-395] fixed item list for simple graph (Artem)
  - [ZBX-334] added sorting to group list in elements copy form (Artem)
